# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPLv2

* rc-scripts-1.6.11 (20 Apr 2005)

  13 Mar 2005; Roy Marples <uberlord@gentoo.org>:

    fixed typo in iwconfig - fixes #84999 thanks to Jérémie Delente

* rc-scripts 1.6.10 (10 Mar 2005)

  10 Feb 2005; Roy Marples <uberlord@gentoo.org>:

    net.lo now supports fallback_route - fixes #75676
    due to bash limitations, only one fallback route is supported
    
    iproute2 now allows appends routes instead of adding them
    this allows many default routes

    RC_STRICT_NET_CHECKING now supports the none "option" which means
    that the net service is always up

  07 Feb 2005; Roy Marples <uberlord@gentoo.org>:

    netmask2cidr now works correctly - fixes #81119
    Thanks to Benoit Boissinot for the patch

  02 Feb 2005; Roy Marples <uberlord@gentoo.org>:

    wpa_supplicant and iwconfig now loop for 5 seconds if essid is
    not returned straight away

  31 Jan 2005; Roy Marples <uberlord@gentoo.org>:

    removed warning from ifconfig
    dnsdomainname overriding works again - fixes #80174

  17 Jan 2005; Roy Marples <uberlord@gentoo.org>:

    net.lo changed logic to read "only fail if no configuration parameters
    work, bring interface down and abort". Fixes #78092
    all modules should now check interface existance correctly - fixes #76385
    wpa_supplicant now works with EAP - fixes #78367

  13 Jan 2005; Roy Marples <uberlord@gentoo.org>:

    wpa_supplicant forces ctrl_interface to /var/run/wpa_supplicant
    and removes stale directories
    clean_pidfile function no longer errors on empty pidfiles
    net dependancies corrected in runscript.sh - fixes #77839
    allow pure IPv6 addresses - fixes #73844

  12 Jan 2005; Roy Marples <uberlord@gentoo.org>:

    net.lo now ignores dot files when loading modules
    ipppd module now stops correctly - fixes #73067 again

  11 Jan 2005; Roy Marples <uberlord@gentoo.org>:
